--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -11,7 +11,48 @@
 
     <body>
         <h1>Chicken Curry Recipe</h1>
-        <h3><strong>Ingredients Needed:</strong></h3>
+        <img src="../images/chicken-curry.jpg">
+        <p><strong>Ingredients Needed:</strong></p>
+        <ul>
+            <li>2 pounds skinless, boneless chicken breast havles</li>
+            <li>2 teaspoons salt</li>
+            <li>1/2 cup cooking oil</li>
+            <li>1 1/2 cups chopped onion</li>
+            <li>1 tablespoon minced garlic</li>
+            <li>1 1/2 teaspoons minced fresh ginger root</li>
+            <li>1 tablespoon curry powder</li>
+            <li>1 teaspoon ground cumin</li>
+            <li>1 teaspoon ground turmeric</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>1 teaspoon cayenne pepper</li>
+            <li>1 tablespoon water</li>    
+            <li>1 (15 ounce) can crush tomatoes</li>
+            <li>1 cup plain yogurt</li>
+            <li>1 tablespoon chopped fresh cilantro</li>
+            <li>1 teaspoon salt</li>
+            <li>1/2 cup water</li>
+            <li>1 teaspoon garam masala</li>
+            <li>1 tablespoon chopped fresh cilantro</li>
+            <li>1 tablespoon fresh lemon juice</li>
+        </ul>
+
+        <p><strong>Directions:</strong></p>
+        <ol>
+            <li>Sprinkle the chicken breasts with 2 teaspoons salt.</li>
+            <li>Heat the oil in a large skillet over high heat; partially cook the chicken in the hot oil in batches until completely browned. Transfer the browned chicken breasts to a plate and set aside.</li>
+            <li>Reduce the heat under the skillet to medium-high; add the onion, garlic, and ginger to the oil remaining in the skillet and cook and stir until the onion turns translucent, about 8 minutes. Stir the curry powder, cumin, turmeric, coriander, cayenne, and 1 tablespoon of water into the onion mixture; allow to heat together for about 1 minute while stirring. Mix the tomatoes, yogurt, 1 tablespoon chopped cilantro, and 1 teaspoon salt into the mixture. Return the chicken breast to the skillet along with any juices on the plate. Pour 1/2 cup water into the mixture; bring to a boil, turning the chicken to coat with the sauce. Sprinkle the garam masala and 1 tablespoon cilantro over the chicken.</li>
+            <li>Cover the skillet and simmer until the chicken breasts are no longer pink in the center and the juices run clear, about 20 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C). Sprinkle with lemon juice to serve.</li>
+        </ol>
+
+        <p><strong>Prep: </strong> 20 mins</p>
+        <p><strong>Cook: </strong> 25 mins</p>
+        <p><strong>Total Time: </strong> 45 mins</p>
+        <p><strong>Servings: </strong> 4</p>
+        <p><strong>Yield: </strong> 4-6 servings</p>
+
+        <p><strong>Nutrition Facts:</strong></p>
+        <p><strong>Per Serving: </strong> 427 calories; protein 38.1g; carbohydrates 14.7g; fat 24.3g; cholesterol 94.7mg; sodium 1370.4mg.</p>
+        <p><strong>Information Gathered from the Website: <a href="https://www.allrecipes.com/recipe/212721/indian-chicken-curry-murgh-kari/">allrecipes</a></strong></p>
         
     </body>
 </html>
