finalize recipe pages

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -11,7 +11,9 @@
 
     <body>
         <h1>Chicken Curry Recipe</h1>
-        <img src="../images/chicken-curry.jpg">
+        <img src="../images/chicken-curry.jpg" alt="chicken curry image">
+        <h3>Description:</h3>
+        <p>Low-fat but tasty Indian chicken curry</p>
         <p><strong>Ingredients Needed:</strong></p>
         <ul>
             <li>2 pounds skinless, boneless chicken breast havles</li>
