--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,6 +12,8 @@
     <body>
         <h1>Lasagna Recipe</h1>
         <img src=../images/lasagna.jpeg alt = "lasagna image">
+        <h3>Description:</h3>
+        <p>Garfield's favorite food's secret recipe is revealed</p>
         <p><strong>Ingredients Needed:</strong></p>
         <ul>
             <li>1 pound sweet <em>Italian</em> sausage</li>
@@ -53,6 +55,7 @@
         <p><strong>Yield: </strong> 12 servings</p>
 
         
+
         <p><strong>Nutrition Facts:</strong></p>
         <p><strong>Per Serving: </strong> 448 calories; protein 29.7g; carbohydrates 36.5g; fat 21.3g; cholesterol 81.8mg; sodium 1400.4mg</p>
         <p><strong>Information Gathered from the Website: <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">allrecipes</a></strong></p>
