--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -11,7 +11,9 @@
 
     <body>
         <h1>Hanger Steak recipes</h1>
-        <img src="../images/steak.jpeg">
+        <img src="../images/steak.jpeg" alt="hanger steak image">
+        <h3>Description:</h3>
+        <p>Restaurant-style butcher steak with crispy outside and soft inside</p>
         <p><strong>Ingredients Needed:</strong></p>
         <ul>
             <li>1 (2pound) butcher's steak (hanger steak)</li>
