add return to top and main page

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -55,6 +55,8 @@
         <p><strong>Nutrition Facts:</strong></p>
         <p><strong>Per Serving: </strong> 427 calories; protein 38.1g; carbohydrates 14.7g; fat 24.3g; cholesterol 94.7mg; sodium 1370.4mg.</p>
         <p><strong>Information Gathered from the Website: <a href="https://www.allrecipes.com/recipe/212721/indian-chicken-curry-murgh-kari/">allrecipes</a></strong></p>
-        
+        <a href="#header">Return to top</a>
+        <p></p>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
