--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -45,5 +45,8 @@
         <p><strong>Per Serving: </strong> 344 calories; protein 27g; carbohydrates 0.6g; fat 25.3g; cholesterol 95.8mg; sodium 348.6mg.</p>
         <p><strong>Information Gathered from the Website: <a href="https://www.allrecipes.com/recipe/258804/butchers-steak-hanger-steak/">allrecipes</a></strong></p>
 
+        <a href="#header">Return to top</a>
+        <p></p>
+        <a href="../index.html">Return to main page</a>
     </body>
 </html>
