personalize main page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <html lang="en">
         <head>
             <meta charset="utf-8">
-            <title>Odin Recipes</title>
+            <title>Kanken's Favorite Foods</title>
         </head>
     
         <body>
-            <h1>Odin Recipes</h1>
+            <h1>Kanken's Favorite Foods</h1>
+            <img src="images/cat.jpg" alt="Kanken the Cat">
+            <p>Food so good it will make you cry!</p>
             <ul>
                 <a href= "recipes/lasagna.html"><li>Lasagna Recipe</li></a>
                 <a href= "recipes/steak.html"><li>Steak Recipe</li></a>
