add external css to html with background color and several styling methods

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,13 +7,14 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1 id='header'>Lasagna Recipe</h1>
-        <img src=../images/lasagna.jpeg alt = "lasagna image">
+        <h1 class="title" id='header'>Lasagna Recipe</h1>
+        <img class= "foodimg" src=../images/lasagna.jpeg alt = "lasagna image">
         <h3>Description:</h3>
-        <p>Garfield's favorite food's secret recipe is revealed</p>
+        <p>My friend, Garfield's favorite food's secret recipe is revealed</p>
         <p><strong>Ingredients Needed:</strong></p>
         <ul>
             <li>1 pound sweet <em>Italian</em> sausage</li>
