--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -7,11 +7,12 @@
     <head>
         <meta charset="utf-8">
         <title>Hanger Steak Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <h1>Hanger Steak recipes</h1>
-        <img src="../images/steak.jpeg" alt="hanger steak image">
+        <img class= "foodimg" src="../images/steak.jpeg" alt="hanger steak image">
         <h3>Description:</h3>
         <p>Restaurant-style butcher steak with crispy outside and soft inside</p>
         <p><strong>Ingredients Needed:</strong></p>
