--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -7,11 +7,12 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Curry Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Chicken Curry Recipe</h1>
-        <img src="../images/chicken-curry.jpg" alt="chicken curry image">
+        <h1 class="title" id="header">Chicken Curry Recipe</h1>
+        <img class= "foodimg" src="../images/chicken-curry.jpg" alt="chicken curry image">
         <h3>Description:</h3>
         <p>Low-fat but tasty Indian chicken curry</p>
         <p><strong>Ingredients Needed:</strong></p>
